--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="manifest" href="manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@400;700&display=swap');
       body {
-        font-family: 'Fredoka', sans-serif;
+        font-family: 'Andika New Basic', sans-serif;
       }
       .train-wheel {
         animation: spin 2s linear infinite;
