--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 }
 </script>
 </head>
-  <body class="bg-sky-100 text-slate-800 h-screen overflow-hidden">
+  <body class="bg-sky-100 text-slate-800 min-h-screen overflow-x-hidden">
     <div id="root"></div>
     <!-- Explicit module entry point for Vite/Vercel -->
     <script type="module" src="/index.tsx"></script>
